--- a/Python.ipynb
+++ b/Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPDG1PH3mq2Hkcc44ppV8u/",
+      "authorship_tag": "ABX9TyN9SNXPtkx4IiPaKZ0KgRIk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,74 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "DdJBVuHDqAtx"
+        "id": "DdJBVuHDqAtx",
+        "outputId": "3175d2b5-4bab-47b5-f3c4-d2fbd5553439",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I Competição de Programação da Start\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"I Competição de Programação da Start\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ano = \"II\"\n",
+        "\n",
+        "print(ano, \"Competição de Programação da Start\")"
+      ],
+      "metadata": {
+        "id": "H3HwUgG4dZwN",
+        "outputId": "a0250d05-01e7-4147-f380-196686bb07ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "II Competição de Programação da Start\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"{ano} Competição de Programação da Start\")"
+      ],
+      "metadata": {
+        "id": "FUM0nnUveJau",
+        "outputId": "ac1fb583-d05c-4f67-d64a-88db90a321ff",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "II Competição de Programação da Start\n"
+          ]
+        }
+      ]
     }
   ]
 }
