--- a/Python.ipynb
+++ b/Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN9SNXPtkx4IiPaKZ0KgRIk",
+      "authorship_tag": "ABX9TyOBS3L/sXcQFSBqJDM+MgDf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
       "execution_count": 1,
       "metadata": {
         "id": "DdJBVuHDqAtx",
-        "outputId": "3175d2b5-4bab-47b5-f3c4-d2fbd5553439",
+        "outputId": "88bfe41b-a69f-4b02-cec6-41a5e224fc3a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -41,35 +41,35 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "I Competição de Programação da Start\n"
+            "Everything can change if you learn to change\n"
           ]
         }
       ],
       "source": [
-        "print(\"I Competição de Programação da Start\")"
+        "print(\"Everything can change if you learn to change\")"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "ano = \"II\"\n",
+        "solution = \"How could I change, if I have no clue?\"\n",
         "\n",
-        "print(ano, \"Competição de Programação da Start\")"
+        "print(solution, \"Competição de Programação da Start\")"
       ],
       "metadata": {
         "id": "H3HwUgG4dZwN",
-        "outputId": "a0250d05-01e7-4147-f380-196686bb07ed",
+        "outputId": "1f2fa7d7-0610-49f5-ddcf-e3f37b0fb6f9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "II Competição de Programação da Start\n"
+            "How could I change, if I have no clue? Competição de Programação da Start\n"
           ]
         }
       ]
@@ -77,22 +77,22 @@
     {
       "cell_type": "code",
       "source": [
-        "print(f\"{ano} Competição de Programação da Start\")"
+        "print(f\"{solution} I already said it!\")"
       ],
       "metadata": {
         "id": "FUM0nnUveJau",
-        "outputId": "ac1fb583-d05c-4f67-d64a-88db90a321ff",
+        "outputId": "3e5e26c9-b1e1-4060-f3a7-d02d650a87ab",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "II Competição de Programação da Start\n"
+            "How could I change, if I have no clue? I already said it!\n"
           ]
         }
       ]
