--- a/Python.ipynb
+++ b/Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOBS3L/sXcQFSBqJDM+MgDf",
+      "authorship_tag": "ABX9TyMgzAFkHYmgwiBEg5Eg2lwG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "DdJBVuHDqAtx",
         "outputId": "88bfe41b-a69f-4b02-cec6-41a5e224fc3a",
@@ -54,22 +54,22 @@
       "source": [
         "solution = \"How could I change, if I have no clue?\"\n",
         "\n",
-        "print(solution, \"Competição de Programação da Start\")"
+        "print(solution, \"I already said it!\")"
       ],
       "metadata": {
         "id": "H3HwUgG4dZwN",
-        "outputId": "1f2fa7d7-0610-49f5-ddcf-e3f37b0fb6f9",
+        "outputId": "1af42bac-9953-4265-aa8d-cbf801f770bb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "How could I change, if I have no clue? Competição de Programação da Start\n"
+            "How could I change, if I have no clue? I already said it!\n"
           ]
         }
       ]
@@ -86,7 +86,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
